new refresh button plus a couple of swagger tweaks
